# qt-demo

./: .gitignore  CMakeLists.txt  boost.bat  build.bat  env.bat  未命名绘图.drawio
docs/: ck.md  协议说明.docx  干扰PRUE.docx  架构图.drawio  电侦RTM.docx  通用消息.docx
src/ck_client/: CommonModule.cpp  CommonModule.hpp  Main.cpp  ModuleController.cpp  ModuleController.hpp  PRUEModule.cpp  PRUEModule.hpp  RTMModule.cpp
src/ck_client/conf/: module.ini
src/ck_test/: Main.cpp
src/client/: CMakeLists.txt  ClientMain.cpp  CommonBase.cpp  CommonBase.hpp  CommonHeader.hpp  CommonModule.cpp  CommonModule.hpp  DataHeader.hpp  Main.cpp  ModuleController.cpp  ModuleController.hpp  NebulaController.cpp  NebulaController.hpp  PRUEModule.cpp  PRUEModule.hpp  RTMController.cpp  RTMController.hpp  RTMModule.cpp  RTMModule.hpp  TypesVOI.h
src/client/conf/: module.ini
src/kl_client/: CMakeLists.txt  CommonHeader.hpp  CommonModule.cpp  CommonModule.hpp  Main.cpp  ModuleBase.cpp  ModuleBase.hpp  ModuleCommon.cpp  ModuleCommon.hpp  ModuleCommonHeader.hpp  ModuleController.cpp  ModuleController.hpp  ModuleCore.cpp  ModuleCore.hpp  ModuleHeader.hpp  ModuleMain.cpp  NebulaCommon.cpp  NebulaCommon.hpp  NebulaController.cpp  NebulaController.hpp  NebulaProtol.hpp  PRUEModule.cpp  PRUEModule.hpp  RTMModule.cpp  RTMModule.hpp  TypesVOI.h  Worker.cpp  Worker.hpp
src/kl_client/conf/: Detect.json  Detector1.json  JAMCfg.json  Jammer1.json  PRUECfg.ini  RTMCfg.ini  common.ini  module.ini
src/kl_server/: CMakeLists.txt  ServerMain.cpp
src/kl_test/: CMakeLists.txt  ClassA.cpp  ClassA.hpp  ClassB.cpp  ClassB.hpp  Demo.cpp  Demo.hpp  Main.cpp  Worker.cpp  Worker.hpp  WorkerTcp.cpp  WorkerTcp.hpp  WorkerUdp.cpp  WorkerUdp.hpp
src/kl_ui/: CMakeLists.txt  Login.cpp  Login.hpp  LoginWin.cpp  LoginWin.hpp  MainWin.cpp  MainWin.hpp  main.cpp  stuwin.ui  ui_login.h  ui_stuwin.h
src/kl_ui/ui/: Login.ui  script.bat  ui_Login.hpp  ui_MainWin.hpp
src/server/: CMakeLists.txt  ServerMain.cpp
